Implement Make My Trip feature and fix navigation

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.31.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
