--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
@@ -17,6 +18,7 @@
     "framer-motion": "^12.31.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
+    "mapbox-gl": "^3.18.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
