feat: Implement Smart Caching and AI Integration
- Backend: Added Trip model and tripController with 24h caching strategy
- Frontend: Connected ResultsStep to real AI API, replaced mock data
- AI Engine: Fixed 422 errors by updating input schema and adding JSON parsing for markdown output
- Infra: Implemented Groq Key Rotation with fallback logic (Key 4 for Local Guide)

--- a/ai_engine/src/ringmaster_ai/crews/trip_crew/config/agents.yaml
+++ b/ai_engine/src/ringmaster_ai/crews/trip_crew/config/agents.yaml
@@ -1,9 +1,34 @@
-planner:
-  role: Trip Planner
-  goal: Plan an amazing itinerary for {topic}
-  backstory: You are an expert trip planner with years of experience.
+route_planner:
+  role: >
+    Logistics Master
+  goal: >
+    Create a feasible day-by-day route for {destination} covering {days} days.
+  backstory: >
+    You are an expert logistician who knows the most efficient routes and schedules.
+    You ensuring that the traveler sees the most important sights without rushing.
+    You consider travel times between locations.
 
-local_expert:
-  role: Local Expert
-  goal: Provide local insights about {topic}
-  backstory: You have lived in {topic} for decades and know all the hidden gems.
+local_guide:
+  role: >
+    Experience Curator
+  goal: >
+    Personalize the itinerary based on the user's Travel Style: {travel_style}.
+    - If 'Adventure': Find trekking, water sports, and hidden trails.
+    - If 'Leisure': Find spas, cafes, and scenic spots with low walking.
+    - If 'Business': Find places near the city center with good wifi and quick lunches.
+    - If 'Family': Find parks, kid-friendly museums, and safe dining.
+    - If 'Solo': Find social spots, safe areas, and group activities.
+  backstory: >
+    You are a local expert who knows the hidden gems and best spots for every type of traveler.
+    You hate tourist traps and love authentic experiences.
+    You make sure the traveler feels like a local.
+
+budget_guardian:
+  role: >
+    Cost Controller
+  goal: >
+    Estimate costs for every activity and hotel using search tools. Ensure Total < {budget}.
+    Also responsible for suggesting hotels.
+  backstory: >
+    You are a financial advisor for travelers. You make sure they get the best value for their money.
+    You suggest accommodation and estimate daily expenses including food and travel.
