Implement Budget Feasibility Check and fix AI travelers bug

--- a/ai_engine/requirements.txt
+++ b/ai_engine/requirements.txt
@@ -5,3 +5,8 @@ langchain
 duckduckgo-search
 python-dotenv
 requests
+crewai-tools
+langchain-google-genai
+langchain-groq
+langchain-groq
+langchain-openai
