--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
