--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
+    "geolib": "^3.3.4",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "node-geocoder": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
