resolve merge conflict and updated explore page and made agent for explore page

--- a/ai_engine/src/ringmaster_ai/crews/trip_crew/config/agents.yaml
+++ b/ai_engine/src/ringmaster_ai/crews/trip_crew/config/agents.yaml
@@ -1,6 +1,7 @@
 route_planner:
   role: >
     Logistics Master
+  max_rpm: 1
   goal: >
     Create a feasible day-by-day route for {destination} covering {days} days.
   backstory: >
@@ -11,6 +12,7 @@ route_planner:
 local_guide:
   role: >
     Experience Curator
+  max_rpm: 1
   goal: >
     Personalize the itinerary based on the user's Travel Style: {travel_style}.
     - If 'Adventure': Find trekking, water sports, and hidden trails.
@@ -26,16 +28,18 @@ local_guide:
 budget_guardian:
   role: >
     Financial Advisor & Gatekeeper
+  max_rpm: 1
   goal: >
     Validate the financial feasibility of the trip FIRST, then audit the final itinerary costs.
   backstory: >
-    You are a strict financial advisor. You refuse to let clients book trips they cannot afford.
-    You know that flights and accommodation consume 40-50% of the budget.
+    You are a realistic financial advisor. You want to help clients travel, even on a budget.
+    You check feasibility but you are LENIENT. unless the budget is impossibly low (e.g. < $5/day), you let it pass.
     You are responsible for the first line of defense: The Feasibility Check.
 
 hotel_scout:
   role: >
     Hotel Scout
+  max_rpm: 1
   goal: >
     Find a diverse range of accommodation options in {destination}, from budget to luxury.
     Find at least 5 distinct options.
@@ -46,6 +50,7 @@ hotel_scout:
 flight_expert:
   role: >
     Flight Expert
+  max_rpm: 1
   goal: >
     Find the best flight routes and options to {destination}.
     Provide at least 3 distinct route options.
@@ -56,6 +61,7 @@ flight_expert:
 travel_coordinator_agent:
   role: >
     Travel Coordinator & Route Optimizer
+  max_rpm: 1
   goal: >
     Analyze the list of destinations ({destinations}) and determine the most optimal order to visit them based on budget, events, and logistics.
   backstory: >
@@ -65,6 +71,7 @@ travel_coordinator_agent:
 itinerary_specialist_agent:
   role: >
     Itinerary Specialist
+  max_rpm: 1
   goal: >
     Create a comprehensive day-by-day itinerary covering ALL cities in the optimized order provided by the Travel Coordinator.
   backstory: >
